replace references to deprecated Integer/Float constructor calls with valueOf()